--- a/main.tex
+++ b/main.tex
@@ -111,8 +111,9 @@ Reading, Writing, Programming, Cycling \\and Listening to the Music during all t
 \bigskip
 
 \infobubble{\faWhatsapp}{cvgreen}{white}{+92-349-4906282}
-\infobubble{\faGithub}{cvgreen}{white}{\href{https://github.com/insane-infants}{def\_fun}}
-\infobubble{\faTwitter}{cvgreen}{white}{@c299792458\_}
+\infobubble{\faLinkedin}{cvgreen}{white}{\href{https://www.linkedin.com/in/asad-arshad-b42a0a225}{Asad Arshad}}
+\infobubble{\faGithub}{cvgreen}{white}{\href{https://github.com/def-fun7}{def\_fun}}
+\infobubble{\faTwitter}{cvgreen}{white}{\href{https://x.com/c299792458_}{@c299792458\_}}
 \infobubble{\faEnvelope}{cvgreen}{white}{\href{mailto:asad.mail@tutamail.com}{asad.mail}}
 \infobubble{\faUser}{cvgreen}{white}{\href{https://insane-infants.github.io/Portfolio/}{My Portfolio}}
 
