--- a/main.tex
+++ b/main.tex
@@ -115,7 +115,7 @@ Reading, Writing, Programming, Cycling \\and Listening to the Music during all t
 \infobubble{\faGithub}{cvgreen}{white}{\href{https://github.com/def-fun7}{def\_fun}}
 \infobubble{\faTwitter}{cvgreen}{white}{\href{https://x.com/c299792458_}{@c299792458\_}}
 \infobubble{\faEnvelope}{cvgreen}{white}{\href{mailto:asad.mail@tutamail.com}{asad.mail}}
-\infobubble{\faUser}{cvgreen}{white}{\href{https://insane-infants.github.io/Portfolio/}{My Portfolio}}
+\infobubble{\faUser}{cvgreen}{white}{\href{https://def-fun7.github.io/Portfolio/}{My Portfolio}}
 
 \phantom{turn the page}
 
