changed with timeline

--- a/main.tex
+++ b/main.tex
@@ -134,24 +134,24 @@ Reading, Writing, Programming, Cycling \\and Listening to the Music during all t
 \end{tabular}
 \vspace{2em}
 
-\begin{minipage}[t]{0.35\textwidth}
-\section*{Degrees}
-\begin{tabular}{r p{0.6\textwidth} c}
-    \cvdegree{2019--21}{Intermediate}{F. Sc (Pre Eng) [A+]}{ \newline Govt. College Township \color{headerblue}}{}{gct.jpeg} \\
-    \cvdegree{2021--25}{Bachelors }{Space Sciences [3.86]}{ \newline Dept. of Space Science \newline University of The Punjab \color{headerblue}}{}{pu.png} \\
-\end{tabular}
-\end{minipage}\hfill
-\begin{minipage}[t]{0.3\textwidth}
-\section*{Programming}
-\begin{tabular}{r @{\hspace{0.5em}}l}
-     \bg{skilllabelcolour}{iconcolour}{python} & \barrule{0.55}{0.5em}{cvpurple} \\ 
-    %  \bg{skilllabelcolour}{iconcolour}{R} & \barrule{0.2}{0.5em}{cvpurple} \\
-     \bg{skilllabelcolour}{iconcolour}{javascript} & \barrule{0.43}{0.5em}{cvpurple} \\
-     \bg{skilllabelcolour}{iconcolour}{html, css} &  \barrule{0.45}{0.5em}{cvpurple}\\
-     \bg{skilllabelcolour}{iconcolour}{\LaTeX} & \barrule{0.5}{0.5em}{cvpurple} \\
-\end{tabular}
-\centering\small{(\LaTeX~compiled on \today)}
-\end{minipage}
+% \begin{minipage}[t]{0.35\textwidth}
+% \section*{Degrees}
+% \begin{tabular}{r p{0.6\textwidth} c}
+%     \cvdegree{2019--21}{Intermediate}{F. Sc (Pre Eng) [A+]}{ \newline Govt. College Township \color{headerblue}}{}{gct.jpeg} \\
+%     \cvdegree{2021--25}{Bachelors }{Space Sciences [3.86]}{ \newline Dept. of Space Science \newline University of The Punjab \color{headerblue}}{}{pu.png} \\
+% \end{tabular}
+% \end{minipage}\hfill
+% \begin{minipage}[t]{0.3\textwidth}
+% \section*{Programming}
+% \begin{tabular}{r @{\hspace{0.5em}}l}
+%      \bg{skilllabelcolour}{iconcolour}{python} & \barrule{0.55}{0.5em}{cvpurple} \\ 
+%     %  \bg{skilllabelcolour}{iconcolour}{R} & \barrule{0.2}{0.5em}{cvpurple} \\
+%      \bg{skilllabelcolour}{iconcolour}{javascript} & \barrule{0.43}{0.5em}{cvpurple} \\
+%      \bg{skilllabelcolour}{iconcolour}{html, css} &  \barrule{0.45}{0.5em}{cvpurple}\\
+%      \bg{skilllabelcolour}{iconcolour}{\LaTeX} & \barrule{0.5}{0.5em}{cvpurple} \\
+% \end{tabular}
+% \centering\small{(\LaTeX~compiled on \today)}
+% \end{minipage}
 
 \normalsize
 
@@ -163,7 +163,13 @@ Reading, Writing, Programming, Cycling \\and Listening to the Music during all t
     \cvevent{2024}{QSOs Spectra and Virial BH masses on SDSS}{Solo}{SciServer \color{cvred}}
     {In this little side project, I explored the vast dataset on Spectra of QSOs through python as well as performed some stats on the BH mass dataset from \textbf{Vizier}.}{ss.png} \\
     \cvevent{2023}{Exoplanets around ``TRAPPIST-1'' through ``KEPLER''}{Lead}{FITS Liberator \& MAST \color{cvred}}{Analysing the Light curves of ``TRAPPIST-1'' that we made using the ``Transit data'' from \textbf{Kepler Mission} and \textbf{K2} and studied the orientation and general planetary parametes of the planets in TRAPPIST system.}{mast.jpeg} \\
+    \cvevent{2023}{Satellite Orbits and Ground Track using ``Keplerian Elements}{Solo}{Python \& VS code \color{cvred}}{We used the keplerian elements information on Satellites like Landsat and wrote a python script that calculated the path of satellite and animated the plot as well as it's ground track on a longitude and latitude axes with labels.}{py.jpg} \\
 \end{tabular}
+
+\begin{center}
+    \small
+    \textbf{and many many more relating to orbital mechanics and mostly in GIS, Remote Sensing and Maps.}
+\end{center}
 \vspace{2em}
 
 \begin{minipage}[t]{0.3\textwidth}
