--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,7 @@
 \setlength{\rightcolwidth}{0.75\textwidth}
 
 %------------------------------------------------------------------
-\title{First CV}
+\title{Third CV}
 \author{\LaTeX{} Asad}
 \date{May 2024}
 
@@ -32,7 +32,7 @@
 
 \section*{Start}
 
-\simpleheader{headercolour}{}{Asad Arshad}{Astrophysicist \& Programmer}{white}
+\simpleheader{headercolour}{}{Asad Arshad}{Astrophysicist, Geospatial Specialist \& Programmer}{white}
 
 
 
@@ -61,7 +61,7 @@
 % \end{center}
 % \bigskip
 
-\vspace{4.5em}
+\vspace{14.5em}
 \bg{cvgreen}{white}{About me}\\[0.5em]
 
 {\footnotesize
@@ -110,12 +110,12 @@ Reading, Writing, Programming, Cycling \\and Listening to the Music during all t
 \vspace{8em}
 \bigskip
 
-\infobubble{\faWhatsapp}{cvgreen}{white}{+92-349-4906282}
-\infobubble{\faLinkedin}{cvgreen}{white}{\href{https://www.linkedin.com/in/asad-arshad-b42a0a225}{Asad Arshad}}
-\infobubble{\faGithub}{cvgreen}{white}{\href{https://github.com/def-fun7}{def\_fun}}
-\infobubble{\faTwitter}{cvgreen}{white}{\href{https://x.com/c299792458_}{@c299792458\_}}
-\infobubble{\faEnvelope}{cvgreen}{white}{\href{mailto:asad.mail@tutamail.com}{asad.mail}}
-\infobubble{\faUser}{cvgreen}{white}{\href{https://def-fun7.github.io/Portfolio/}{My Portfolio}}
+% \infobubble{\faWhatsapp}{cvgreen}{white}{+92-349-4906282}
+% \infobubble{\faLinkedin}{cvgreen}{white}{\href{https://www.linkedin.com/in/asad-arshad-b42a0a225}{Asad Arshad}}
+% \infobubble{\faGithub}{cvgreen}{white}{\href{https://github.com/def-fun7}{def\_fun}}
+% \infobubble{\faTwitter}{cvgreen}{white}{\href{https://x.com/c299792458_}{@c299792458\_}}
+% \infobubble{\faEnvelope}{cvgreen}{white}{\href{mailto:asad.mail@tutamail.com}{asad.mail}}
+% \infobubble{\faUser}{cvgreen}{white}{\href{https://def-fun7.github.io/Portfolio/}{My Portfolio}}
 
 \phantom{turn the page}
 
@@ -128,9 +128,11 @@ Reading, Writing, Programming, Cycling \\and Listening to the Music during all t
 \section*{On Going Projects }
 
 \begin{tabular}{r| p{0.5\textwidth} c}
+    \cvevent{2025--Pre}{A Complete Bus Tracking System}{Developer}{React Native, Next.JS, PostgreSQL\color{cvred}}
+    {The goal is to design a complete tracking system for buses comprising on a android mobile app on driver side leveraging local mobile gps module and a web App showing real time bus location, linked through a backend PostgreSQL database through BaaS like Supabase or Amazon RDS.}{bus.png}\\
+    \cvevent{2025--Pre}{A Book-keeping Web-Desktop Application}{Developer}{Python, SQL, HTML, CSS, JS\color{cvred}}
+    {An Application using SQL database to keep employee records, accounts and authentication, Python for backend procedure, HTML, CSS and JS for user interface, in a local Desktop App, bind using eel library }{eel.jpg}
     
-    \cvevent{2025--Pre}{Down the Black Hole: A wobbly web experience}{Lead}{HTML, CSS, JS \color{cvred}}
-    {As for my Bachelors final year project, I along with a friend, are currently designing a webpage that will contain information, articles, current research, illustrations from across the web, links as well as basic help to navigate data regrading BHs from sources like NASA and the things we learn as we venture in this rabbit hole. }{bh.jpg}
 \end{tabular}
 \vspace{2em}
 
@@ -157,18 +159,18 @@ Reading, Writing, Programming, Cycling \\and Listening to the Music during all t
 
 \section*{Past Work}
 \begin{tabular}{r| p{0.5\textwidth} c}
+    \cvevent{2025}{L'appel au Vide: Light Signals around SMBH}{Lead}{HTML, CSS, JS, Github \color{cvred}}
+    {As for my Bachelors final year project, we investigated what happens to light Signals in the vicinity of SMBHs and what would a conversation be like using such light signals in morse code and developed a webite \href{https://def-fun7.github.io/call-to-the-void/}{Call-to-the-void}}{bh.jpg} \\
+    \cvevent{2024}{Guessing the Countries: A WebGIS Game}{Solo}{Github \color{cvred}}{A simple yet quite fun game, whose objective is right in the name, guessing the names of the countries and get fun surpised gif reactions.}{gh.jpg} \\
     \cvevent{2024}{Studying the effects of ENSO on Moonsoon in Pakistan}{Thought Leader}{Google Earth Engine \color{cvred}}
-    {Our aim was to use EE datasets to calculate \textbf{Oceanic Nino Index (ONI)} and \textbf{Standarized Precepitation Index (SPI)} to see how the rainfall in moonsoon season in Punjab, Pakistan is effected by El Nino and La Nina.
-    }{earthengine.jpeg} \\
-    \cvevent{2024}{QSOs Spectra and Virial BH masses on SDSS}{Solo}{SciServer \color{cvred}}
-    {In this little side project, I explored the vast dataset on Spectra of QSOs through python as well as performed some stats on the BH mass dataset from \textbf{Vizier}.}{ss.png} \\
-    \cvevent{2023}{Exoplanets around ``TRAPPIST-1'' through ``KEPLER''}{Lead}{FITS Liberator \& MAST \color{cvred}}{Analysing the Light curves of ``TRAPPIST-1'' that we made using the ``Transit data'' from \textbf{Kepler Mission} and \textbf{K2} and studied the orientation and general planetary parametes of the planets in TRAPPIST system.}{mast.jpeg} \\
-    \cvevent{2023}{Satellite Orbits and Ground Track using ``Keplerian Elements}{Solo}{Python \& VS code \color{cvred}}{We used the keplerian elements information on Satellites like Landsat and wrote a python script that calculated the path of satellite and animated the plot as well as it's ground track on a longitude and latitude axes with labels.}{py.jpg} \\
+    {Our aim was to use EE datasets to calculate \textbf{Oceanic Nino Index (ONI)} and \textbf{Standarized Precepitation Index (SPI)} to see how the rainfall in moonsoon season in Punjab, Pakistan is effected by El Nino and La Nina.}{earthengine.jpeg} \\
+    % \cvevent{2024}{QSOs Spectra and Virial BH masses on SDSS}{Solo}{SciServer \color{cvred}}{In this little side project, I explored the vast dataset on Spectra of QSOs through python as well as performed some stats on the BH mass dataset from \textbf{Vizier}.}{ss.png} \\
+    
 \end{tabular}
 
 \begin{center}
     \small
-    \textbf{and many many more relating to orbital mechanics and mostly in GIS, Remote Sensing and Maps.}
+    \textbf{and more on next page}
 \end{center}
 \vspace{2em}
 
