--- a/main_1.tex
+++ b/main_1.tex
@@ -30,7 +30,7 @@
 
 
 
-\header{\bg{headerfontbox}{headerfontboxfont}{\LobsterTwo  Mr.} }{\bgupper{headerfontbox}{headerfontboxfont}{\bfseries\Huge Asad Arshad}}{\bg{headerfontbox}{headerfontboxfont}{\large Astrophysicist \& Programmer}}{jack.jpg}{headerblue}{3.5cm}{2cm}
+\header{\bg{headerfontbox}{headerfontboxfont}{\LobsterTwo  Mr.} }{\bgupper{headerfontbox}{headerfontboxfont}{\bfseries\Huge Asad Arshad}}{\bg{headerfontbox}{headerfontboxfont}{\large Astrophysicist, Geospatial Specialist\& Programmer}}{jack.jpg}{headerblue}{3.5cm}{2cm}
 
 
 
@@ -72,8 +72,15 @@
 
 \begin{minipage}[t]{\leftcolwidth}
 \begin{tabular}{l | ll}
-\textbf{Urdu} & C2 & {\phantom{x}\footnotesize mother tongue} \\
-\textbf{English} & C2 & \pictofraction{\faCircle}{cvgreen}{3}{black!30}{1}{\tiny}
+
+
+\textbf{Learning} &  & \pictofraction{\faCircle}{cvgreen}{4}{black!30}{1}{\tiny}\\
+\textbf{Programming} &  & \pictofraction{\faCircle}{cvgreen}{4}{black!30}{1}{\tiny}\\
+\textbf{Writing} &  & \pictofraction{\faCircle}{cvgreen}{4}{black!30}{1}{\tiny} \\
+
+
+
+
 \end{tabular}
 \end{minipage}
 
@@ -93,11 +100,11 @@
 
 \begin{minipage}[t]{0.3\textwidth}
 \begin{tabular}{r @{\hspace{0.5em}}l}
-     \bg{skilllabelcolour}{iconcolour}{python} & \barrule{0.55}{0.5em}{cvpurple} \\ 
+     \bg{skilllabelcolour}{iconcolour}{astropy} & \barrule{0.55}{0.5em}{cvpurple} \\ 
     %  \bg{skilllabelcolour}{iconcolour}{R} & \barrule{0.2}{0.5em}{cvpurple} \\
-     \bg{skilllabelcolour}{iconcolour}{javascript} & \barrule{0.43}{0.5em}{cvpurple} \\
-     \bg{skilllabelcolour}{iconcolour}{html, css} &  \barrule{0.45}{0.5em}{cvpurple}\\
-     \bg{skilllabelcolour}{iconcolour}{\LaTeX} & \barrule{0.5}{0.5em}{cvpurple} \\
+     \bg{skilllabelcolour}{iconcolour}{HTML} & \barrule{0.43}{0.5em}{cvpurple} \\
+     \bg{skilllabelcolour}{iconcolour}{CSS} &  \barrule{0.45}{0.5em}{cvpurple}\\
+     \bg{skilllabelcolour}{iconcolour}{SQL} & \barrule{0.5}{0.5em}{cvpurple} \\
 \end{tabular}
 
 
@@ -145,9 +152,9 @@
 \begin{minipage}[t]{0.4\textwidth}
 \section*{Degrees}
 \begin{tabular}{r p{0.6\textwidth} c}
-    \cvdegree{2019}{Matriculation}{HSc}{Govt. High School, Lahore \color{headerblue}}{}{gct.jpeg} \\
+    \cvdegree{2025}{Bachelors}{BS Space Science}{PU \color{headerblue}}{}{pu.png} \\
     \cvdegree{2021}{Intermediate}{FSc. Pre Eng}{GCT, Lhr \color{headerblue}}{}{gct.jpeg} \\
-    \cvdegree{2025}{Bachelors}{BS Space Science}{PU \color{headerblue}}{}{pu.png}
+    \cvdegree{2019}{Matriculation}{HSc}{Govt. High School, Lahore \color{headerblue}}{}{gct.jpeg}    
 \end{tabular}
 \end{minipage}\hfill
 \begin{minipage}[t]{0.16\textwidth}
@@ -165,6 +172,7 @@
 \begin{minipage}[t]{0.3\textwidth}
 \section*{Certificates \& Grants}
 \begin{tabular}{>{\footnotesize\bfseries}r >{\footnotesize}p{0.55\textwidth}}
+    2025 & Honhaar Scholarship \\
     2024 & Astronomy Quiz at University \\
     2024 & Summer Internee at PMD \\
 \end{tabular}
@@ -184,7 +192,7 @@
 % arguments: <line thickness>  <colour>    <size> <other colour> <label inside> <below> <where is the label> <percentage>
 \progressarc{2mm}{headerblue}{0.7cm}{cvbeige}{\large 91\%}{Python}{below}{91} \hfill
 \progressarc{2mm}{headerblue}{0.7cm}{cvbeige}{\large 85\%}{Javascript}{below}{87} \hfill
-\progressarc{2mm}{headerblue}{0.7cm}{cvbeige}{\large 79\%}{Teamwork}{below}{79}\hfill
+\progressarc{2mm}{headerblue}{0.7cm}{cvbeige}{\large 93\%}{ArcGIS Pro}{below}{79}\hfill
 \progressarc{2mm}{headerblue}{0.7cm}{cvbeige}{\large 81\%}{\LaTeX}{below}{81} 
 
 \begin{flushright}
