--- a/hipster_cv/hipstercv.sty
+++ b/hipster_cv/hipstercv.sty
@@ -34,6 +34,7 @@
 \usetikzlibrary{topaths}
 
 \usepackage{graphicx}
+\graphicspath{{../images/}} % set the graphics path
 %\usepackage[usenames, dvipsnames]{color} 
 % https://de.sharelatex.com/learn/Using_colours_in_LaTeX#!#Reference_guide z.B. \color{RubineRed}
 %\usepackage{xcolor}
