--- a/published/preOct_25/old/main_1.tex
+++ b/published/preOct_25/old/main_1.tex
@@ -152,9 +152,10 @@
 \begin{minipage}[t]{0.4\textwidth}
 \section*{Degrees}
 \begin{tabular}{r p{0.6\textwidth} c}
+    \cvdegree{2025}{Masters}{MS Astrophysics}{IST \color{headerblue}}{}{ist.png} \\
     \cvdegree{2025}{Bachelors}{BS Space Science}{PU \color{headerblue}}{}{pu.png} \\
     \cvdegree{2021}{Intermediate}{FSc. Pre Eng}{GCT, Lhr \color{headerblue}}{}{gct.jpeg} \\
-    \cvdegree{2019}{Matriculation}{HSc}{Govt. High School, Lahore \color{headerblue}}{}{gct.jpeg}    
+    % \cvdegree{2019}{Matriculation}{HSc}{Govt. High School, Lahore \color{headerblue}}{}{gct.jpeg}    
 \end{tabular}
 \end{minipage}\hfill
 \begin{minipage}[t]{0.16\textwidth}
