--- a/simplehipstercv.sty
+++ b/simplehipstercv.sty
@@ -37,6 +37,7 @@ citecolor=gray]{hyperref}
 \usetikzlibrary{topaths}
 
 \usepackage{graphicx}
+\graphicspath{{./images/}} % set the path where images are stored
 %\usepackage[usenames, dvipsnames]{color} 
 % https://de.sharelatex.com/learn/Using_colours_in_LaTeX#!#Reference_guide z.B. \color{RubineRed}
 %\usepackage{xcolor}
